--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/aroger7/h8tch-fe-task#readme",
   "dependencies": {
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
