--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/aroger7/h8tch-fe-task#readme",
   "dependencies": {
+    "@emotion/babel-plugin": "^11.1.2",
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
     "prop-types": "^15.7.2",
