--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:dev": "webpack --mode='development'",
     "build:prod": "webpack --mode='production'",
     "start": "webpack serve --mode development --port 3000",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint \"src/**\""
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,8 @@
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "eslint": "^7.15.0",
+    "eslint-plugin-react": "^7.21.5",
     "html-webpack-plugin": "^4.5.0",
     "react-svg-loader": "^3.0.3",
     "style-loader": "^2.0.0",
